--- a/test/hardware/config/link_config_u280_lb.ini
+++ b/test/hardware/config/link_config_u280_lb.ini
@@ -20,14 +20,14 @@
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
 nk=network_krnl:1:network_krnl_0
-nk=reduce_sum_half_512:1:arith_hp_0
-nk=reduce_sum_float_512:1:arith_fp_0
-nk=reduce_sum_double_512:1:arith_dp_0
-nk=reduce_sum_int32_t_512:1:arith_i32_0
-nk=reduce_sum_int64_t_512:1:arith_i64_0
+nk=reduce_sum_half:1:arith_hp_0
+nk=reduce_sum_float:1:arith_fp_0
+nk=reduce_sum_double:1:arith_dp_0
+nk=reduce_sum_int32_t:1:arith_i32_0
+nk=reduce_sum_int64_t:1:arith_i64_0
 nk=fp_hp_stream_conv:3:downcast_0_0.downcast_0_1.downcast_0_2
 nk=hp_fp_stream_conv:3:upcast_0_0.upcast_0_1.upcast_0_2
-nk=loopback:3:lb_udp.lb_tcp.lb_user_krnl
+nk=loopback:2:lb_tcp.lb_user_krnl
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
@@ -44,7 +44,6 @@ slr=arith_fp_0:SLR0
 slr=arith_dp_0:SLR0
 slr=arith_i32_0:SLR0
 slr=arith_i64_0:SLR0
-slr=lb_udp:SLR0
 slr=lb_tcp:SLR0
 slr=lb_user_krnl:SLR0
 
@@ -56,25 +55,21 @@ sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
 sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
-sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status
-sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_tcp_open_status
-sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_tcp_notification
-sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_tcp_rx_meta
-sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_tcp_rx_data
-sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_tcp_tx_status
-sc=ccl_offload_0.m_axis_tcp_listen_port:network_krnl_0.s_axis_tcp_listen_port
-sc=ccl_offload_0.m_axis_tcp_open_connection:network_krnl_0.s_axis_tcp_open_connection
-sc=ccl_offload_0.m_axis_tcp_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
-sc=ccl_offload_0.m_axis_tcp_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
-sc=ccl_offload_0.m_axis_tcp_tx_data:network_krnl_0.s_axis_tcp_tx_data
+sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
+sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status
+sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification
+sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta
+sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data
+sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status
+sc=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port
+sc=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection
+sc=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
+sc=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
+sc=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data
 
 # Connect tcp/udp in loopback
 stream_connect=network_krnl_0.net_tx:lb_tcp.in
 stream_connect=lb_tcp.out:network_krnl_0.net_rx
-
-# Connect udp interfaces in a loop
-stream_connect=ccl_offload_0.m_axis_udp_tx_data:lb_udp.in
-stream_connect=lb_udp.out:ccl_offload_0.s_axis_udp_rx_data
 
 # Some clarifications are necessary for the following:
 # Vitis doesnt let us leave streams dangling
