--- a/test/hardware/config/link_config_u280_tri.ini
+++ b/test/hardware/config/link_config_u280_tri.ini
@@ -20,13 +20,11 @@
 nk=ccl_offload:3:ccl_offload_0.ccl_offload_1.ccl_offload_2
 nk=hostctrl:3:hostctrl_0.hostctrl_1.hostctrl_2
 nk=network_krnl:3:network_krnl_0.network_krnl_1.network_krnl_2
-nk=reduce_sum_half_512:3:arith_hp_0.arith_hp_1.arith_hp_2
-nk=reduce_sum_float_512:3:arith_fp_0.arith_fp_1.arith_fp_2
-nk=reduce_sum_double_512:3:arith_dp_0.arith_dp_1.arith_dp_2
-nk=reduce_sum_int32_t_512:3:arith_i32_0.arith_i32_1.arith_i32_2
-nk=reduce_sum_int64_t_512:3:arith_i64_0.arith_i64_1.arith_i64_2
-nk=fp_hp_stream_conv:3:downcast_0.downcast_1.downcast_2
-nk=hp_fp_stream_conv:6:upcast_0_0.upcast_0_1.upcast_0_2.upcast_1_0.upcast_1_1.upcast_1_2
+nk=reduce_sum_half:3:arith_hp_0.arith_hp_1.arith_hp_2
+nk=reduce_sum_float:3:arith_fp_0.arith_fp_1.arith_fp_2
+nk=reduce_sum_double:3:arith_dp_0.arith_dp_1.arith_dp_2
+nk=reduce_sum_int32_t:3:arith_i32_0.arith_i32_1.arith_i32_2
+nk=reduce_sum_int64_t:3:arith_i64_0.arith_i64_1.arith_i64_2
 nk=fp_hp_stream_conv:9:downcast_0_0.downcast_0_1.downcast_0_2.downcast_1_0.downcast_1_1.downcast_1_2.downcast_2_0.downcast_2_1.downcast_2_2
 nk=hp_fp_stream_conv:9:upcast_0_0.upcast_0_1.upcast_0_2.upcast_1_0.upcast_1_1.upcast_1_2.upcast_2_0.upcast_2_1.upcast_2_2
 nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
@@ -96,41 +94,41 @@ sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
 sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
-sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status
-sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_tcp_open_status
-sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_tcp_notification
-sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_tcp_rx_meta
-sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_tcp_rx_data
-sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_tcp_tx_status
-sc=ccl_offload_0.m_axis_tcp_listen_port:network_krnl_0.s_axis_tcp_listen_port
-sc=ccl_offload_0.m_axis_tcp_open_connection:network_krnl_0.s_axis_tcp_open_connection
-sc=ccl_offload_0.m_axis_tcp_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
-sc=ccl_offload_0.m_axis_tcp_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
-sc=ccl_offload_0.m_axis_tcp_tx_data:network_krnl_0.s_axis_tcp_tx_data
+sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
+sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status
+sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification
+sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta
+sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data
+sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status
+sc=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port
+sc=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection
+sc=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
+sc=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
+sc=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data
 
-sc=network_krnl_1.m_axis_tcp_port_status:ccl_offload_1.s_axis_tcp_port_status
-sc=network_krnl_1.m_axis_tcp_open_status:ccl_offload_1.s_axis_tcp_open_status
-sc=network_krnl_1.m_axis_tcp_notification:ccl_offload_1.s_axis_tcp_notification
-sc=network_krnl_1.m_axis_tcp_rx_meta:ccl_offload_1.s_axis_tcp_rx_meta
-sc=network_krnl_1.m_axis_tcp_rx_data:ccl_offload_1.s_axis_tcp_rx_data
-sc=network_krnl_1.m_axis_tcp_tx_status:ccl_offload_1.s_axis_tcp_tx_status
-sc=ccl_offload_1.m_axis_tcp_listen_port:network_krnl_1.s_axis_tcp_listen_port
-sc=ccl_offload_1.m_axis_tcp_open_connection:network_krnl_1.s_axis_tcp_open_connection
-sc=ccl_offload_1.m_axis_tcp_read_pkg:network_krnl_1.s_axis_tcp_read_pkg
-sc=ccl_offload_1.m_axis_tcp_tx_meta:network_krnl_1.s_axis_tcp_tx_meta
-sc=ccl_offload_1.m_axis_tcp_tx_data:network_krnl_1.s_axis_tcp_tx_data
+sc=network_krnl_1.m_axis_tcp_port_status:ccl_offload_1.s_axis_eth_port_status
+sc=network_krnl_1.m_axis_tcp_open_status:ccl_offload_1.s_axis_eth_open_status
+sc=network_krnl_1.m_axis_tcp_notification:ccl_offload_1.s_axis_eth_notification
+sc=network_krnl_1.m_axis_tcp_rx_meta:ccl_offload_1.s_axis_eth_rx_meta
+sc=network_krnl_1.m_axis_tcp_rx_data:ccl_offload_1.s_axis_eth_rx_data
+sc=network_krnl_1.m_axis_tcp_tx_status:ccl_offload_1.s_axis_eth_tx_status
+sc=ccl_offload_1.m_axis_eth_listen_port:network_krnl_1.s_axis_tcp_listen_port
+sc=ccl_offload_1.m_axis_eth_open_connection:network_krnl_1.s_axis_tcp_open_connection
+sc=ccl_offload_1.m_axis_eth_read_pkg:network_krnl_1.s_axis_tcp_read_pkg
+sc=ccl_offload_1.m_axis_eth_tx_meta:network_krnl_1.s_axis_tcp_tx_meta
+sc=ccl_offload_1.m_axis_eth_tx_data:network_krnl_1.s_axis_tcp_tx_data
 
-sc=network_krnl_2.m_axis_tcp_port_status:ccl_offload_2.s_axis_tcp_port_status
-sc=network_krnl_2.m_axis_tcp_open_status:ccl_offload_2.s_axis_tcp_open_status
-sc=network_krnl_2.m_axis_tcp_notification:ccl_offload_2.s_axis_tcp_notification
-sc=network_krnl_2.m_axis_tcp_rx_meta:ccl_offload_2.s_axis_tcp_rx_meta
-sc=network_krnl_2.m_axis_tcp_rx_data:ccl_offload_2.s_axis_tcp_rx_data
-sc=network_krnl_2.m_axis_tcp_tx_status:ccl_offload_2.s_axis_tcp_tx_status
-sc=ccl_offload_2.m_axis_tcp_listen_port:network_krnl_2.s_axis_tcp_listen_port
-sc=ccl_offload_2.m_axis_tcp_open_connection:network_krnl_2.s_axis_tcp_open_connection
-sc=ccl_offload_2.m_axis_tcp_read_pkg:network_krnl_2.s_axis_tcp_read_pkg
-sc=ccl_offload_2.m_axis_tcp_tx_meta:network_krnl_2.s_axis_tcp_tx_meta
-sc=ccl_offload_2.m_axis_tcp_tx_data:network_krnl_2.s_axis_tcp_tx_data
+sc=network_krnl_2.m_axis_tcp_port_status:ccl_offload_2.s_axis_eth_port_status
+sc=network_krnl_2.m_axis_tcp_open_status:ccl_offload_2.s_axis_eth_open_status
+sc=network_krnl_2.m_axis_tcp_notification:ccl_offload_2.s_axis_eth_notification
+sc=network_krnl_2.m_axis_tcp_rx_meta:ccl_offload_2.s_axis_eth_rx_meta
+sc=network_krnl_2.m_axis_tcp_rx_data:ccl_offload_2.s_axis_eth_rx_data
+sc=network_krnl_2.m_axis_tcp_tx_status:ccl_offload_2.s_axis_eth_tx_status
+sc=ccl_offload_2.m_axis_eth_listen_port:network_krnl_2.s_axis_tcp_listen_port
+sc=ccl_offload_2.m_axis_eth_open_connection:network_krnl_2.s_axis_tcp_open_connection
+sc=ccl_offload_2.m_axis_eth_read_pkg:network_krnl_2.s_axis_tcp_read_pkg
+sc=ccl_offload_2.m_axis_eth_tx_meta:network_krnl_2.s_axis_tcp_tx_meta
+sc=ccl_offload_2.m_axis_eth_tx_data:network_krnl_2.s_axis_tcp_tx_data
 
 # Connect tcp kernels in a loop
 # this is temporary, the connections will be broken and 
@@ -138,11 +136,6 @@ sc=ccl_offload_2.m_axis_tcp_tx_data:network_krnl_2.s_axis_tcp_tx_data
 stream_connect=network_krnl_0.net_tx:network_krnl_1.net_rx
 stream_connect=network_krnl_1.net_tx:network_krnl_2.net_rx
 stream_connect=network_krnl_2.net_tx:network_krnl_0.net_rx
-
-# Connect udp interfaces in a loop
-stream_connect=ccl_offload_0.m_axis_udp_tx_data:ccl_offload_1.s_axis_udp_rx_data
-stream_connect=ccl_offload_1.m_axis_udp_tx_data:ccl_offload_2.s_axis_udp_rx_data
-stream_connect=ccl_offload_2.m_axis_udp_tx_data:ccl_offload_0.s_axis_udp_rx_data
 
 # Some clarifications are necessary for the following:
 # Vitis doesnt let us leave streams dangling
