--- a/test/hardware/config/link_config_u280_tcp.ini
+++ b/test/hardware/config/link_config_u280_tcp.ini
@@ -20,14 +20,14 @@ nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
 nk=cmac_krnl:1:cmac_krnl_0
-nk=reduce_sum_half_512:1:arith_hp_0
-nk=reduce_sum_float_512:1:arith_fp_0
-nk=reduce_sum_double_512:1:arith_dp_0
-nk=reduce_sum_int32_t_512:1:arith_i32_0
-nk=reduce_sum_int64_t_512:1:arith_i64_0
+nk=reduce_sum_half:1:arith_hp_0
+nk=reduce_sum_float:1:arith_fp_0
+nk=reduce_sum_double:1:arith_dp_0
+nk=reduce_sum_int32_t:1:arith_i32_0
+nk=reduce_sum_int64_t:1:arith_i64_0
 nk=fp_hp_stream_conv:3:downcast_0_0.downcast_0_1.downcast_0_2
 nk=hp_fp_stream_conv:3:upcast_0_0.upcast_0_1.upcast_0_2
-nk=loopback:2:lb_udp_0.lb_user_krnl
+nk=loopback:1:lb_user_krnl
 
 # Kernels Foorplaning
 slr=downcast_0_0:SLR0
@@ -36,7 +36,6 @@ slr=downcast_0_2:SLR0
 slr=upcast_0_0:SLR0
 slr=upcast_0_1:SLR0
 slr=upcast_0_2:SLR0
-slr=lb_udp_0:SLR0
 slr=lb_user_krnl:SLR0
 slr=arith_hp_0:SLR0
 slr=arith_fp_0:SLR0
@@ -58,25 +57,21 @@ sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
 sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
-sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_tcp_port_status:512
-sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_tcp_open_status:512
-sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_tcp_notification:512
-sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_tcp_rx_meta:512
-sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_tcp_rx_data:512
-sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_tcp_tx_status:512
-sc=ccl_offload_0.m_axis_tcp_listen_port:network_krnl_0.s_axis_tcp_listen_port:512
-sc=ccl_offload_0.m_axis_tcp_open_connection:network_krnl_0.s_axis_tcp_open_connection:512
-sc=ccl_offload_0.m_axis_tcp_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
-sc=ccl_offload_0.m_axis_tcp_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
-sc=ccl_offload_0.m_axis_tcp_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
+sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status:512
+sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status:512
+sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification:512
+sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta:512
+sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data:512
+sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status:512
+sc=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port:512
+sc=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection:512
+sc=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
+sc=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
+sc=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
 
 # Connect Network Kernel to CMAC Kernel
 sc=cmac_krnl_0.axis_net_rx:network_krnl_0.axis_net_rx
 sc=network_krnl_0.axis_net_tx:cmac_krnl_0.axis_net_tx
-
-# Plug UDP interface
-stream_connect=ccl_offload_0.m_axis_udp_tx_data:lb_udp_0.in
-stream_connect=lb_udp_0.out:ccl_offload_0.s_axis_udp_rx_data
 
 # Some clarifications are necessary for the following:
 # Vitis doesnt let us leave streams dangling
