More automation fixes

--- a/test/hardware/config/link_config_u250_tri.ini
+++ b/test/hardware/config/link_config_u250_tri.ini
@@ -91,11 +91,11 @@ sp=ccl_offload_2.m_axi_1:DDR[2]
 
 # Connect host controllers to CCL Offload
 sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
-sc=ccl_offload_0.s_axis_call_ack:hostctrl_0.sts
+sc=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
 sc=hostctrl_1.cmd:ccl_offload_1.s_axis_call_req
-sc=ccl_offload_1.s_axis_call_ack:hostctrl_1.sts
+sc=ccl_offload_1.m_axis_call_ack:hostctrl_1.sts
 sc=hostctrl_2.cmd:ccl_offload_2.s_axis_call_req
-sc=ccl_offload_2.s_axis_call_ack:hostctrl_2.sts
+sc=ccl_offload_2.m_axis_call_ack:hostctrl_2.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
 sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
