--- a/driver/xrt/CMakeLists.txt
+++ b/driver/xrt/CMakeLists.txt
@@ -15,18 +15,30 @@
 #
 # *******************************************************************************/
 
-project(xlnx-dacusr)
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.9)
+project(accl VERSION 0.1.0 DESCRIPTION "ACCL")
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_STANDARD 17)
+
+if (NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
+endif()
+
+if (NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+endif()
 
 # MPI
 find_package(MPI REQUIRED)
+include_directories(${MPI_CXX_INCLUDE_PATH})
+link_libraries(${MPI_CXX_LIBRARIES} uuid)
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${MPI_CXX_LINK_FLAGS})
 
 # Json
 find_package(jsoncpp REQUIRED)
 link_libraries(jsoncpp_lib)
+get_target_property(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
+include_directories(${JSON_INC_PATH})
 
 # ZMQ
 link_libraries(zmq)
@@ -37,4 +49,34 @@ link_libraries(zmq)
 # link_libraries(xrt_core)
 # include_directories($ENV{XILINX_XRT}/include)
 include_directories(include)
-add_subdirectory(src)
+
+set(ACCL_SOURCES
+    src/accl.cpp
+    src/common.cpp
+    src/simdevice.cpp
+)
+
+add_library(accl SHARED
+    ${ACCL_SOURCES}
+)
+
+set_target_properties(accl PROPERTIES
+    VERSION ${PROJECT_VERSION}
+    SOVERSION 1
+    PUBLIC_HEADER include/accl.h
+)
+
+add_executable(test src/test.cpp ${ACCL_SOURCES})
+
+# docs
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+    # note the option ALL which allows to build the docs together with the application
+    add_custom_target(docs ALL
+        COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMENT "Generating API documentation with Doxygen"
+        VERBATIM )
+else (DOXYGEN_FOUND)
+  message("Doxygen need to be installed to generate the doxygen documentation")
+endif (DOXYGEN_FOUND)
