remove docs from all

--- a/driver/xrt/CMakeLists.txt
+++ b/driver/xrt/CMakeLists.txt
@@ -63,7 +63,7 @@ set_target_properties(accl PROPERTIES
 # docs
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
-    add_custom_target(docs ALL
+    add_custom_target(docs
         COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "Generating API documentation with Doxygen"
