Improve cmake project C++ driver

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "test/xrt/cxxopts"]
 	path = test/xrt/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "jsoncpp"]
+	path = jsoncpp
+	url = https://github.com/open-source-parsers/jsoncpp.git
