Skipping fanin test for udp

--- a/kernels/Makefile
+++ b/kernels/Makefile
@@ -36,4 +36,4 @@ plugins:
 	$(MAKE) -C $@ DEVICE=$(FPGAPART) TARGET=$(TARGET)
 
 cclo:
-	$(MAKE) -C $@ PLATFORM=$(FPGAPART) DEBUG=$(DEBUG)
+	$(MAKE) -C $@ PLATFORM=$(FPGAPART) HW_DEBUG=$(DEBUG)
