--- a/test/hardware/config/link_config_u250_udp.ini
+++ b/test/hardware/config/link_config_u250_udp.ini
@@ -19,7 +19,7 @@
 nk=networklayer:1:networklayer_0
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
-nk=cmac_krnl:1:cmac_0
+nk=cmac_0:1:cmac_0
 nk=reduce_sum_half:1:arith_hp_0
 nk=reduce_sum_float:1:arith_fp_0
 nk=reduce_sum_double:1:arith_dp_0
