--- a/test/hardware/config/link_config_u280_udp.ini
+++ b/test/hardware/config/link_config_u280_udp.ini
@@ -19,7 +19,7 @@
 nk=networklayer:1:networklayer_0
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
-nk=cmac_krnl:1:cmac_0
+nk=cmac_0:1:cmac_0
 nk=reduce_sum_half:1:arith_hp_0
 nk=reduce_sum_float:1:arith_fp_0
 nk=reduce_sum_double:1:arith_dp_0
@@ -30,20 +30,20 @@ nk=hp_fp_stream_conv:3:upcast_0_0.upcast_0_1.upcast_0_2
 nk=loopback:1:lb_user_krnl
 
 # Kernels Foorplaning
-slr=downcast_0_0:SLR0
-slr=downcast_0_1:SLR0
-slr=downcast_0_2:SLR0
-slr=upcast_0_0:SLR0
-slr=upcast_0_1:SLR0
-slr=upcast_0_2:SLR0
-slr=lb_user_krnl:SLR0
-slr=arith_hp_0:SLR0
-slr=arith_fp_0:SLR0
-slr=arith_dp_0:SLR0
-slr=arith_i32_0:SLR0
-slr=arith_i64_0:SLR0
-slr=ccl_offload_0:SLR0
-slr=hostctrl_0:SLR0
+slr=downcast_0_0:SLR1
+slr=downcast_0_1:SLR1
+slr=downcast_0_2:SLR1
+slr=upcast_0_0:SLR1
+slr=upcast_0_1:SLR1
+slr=upcast_0_2:SLR1
+slr=lb_user_krnl:SLR1
+slr=arith_hp_0:SLR1
+slr=arith_fp_0:SLR1
+slr=arith_dp_0:SLR1
+slr=arith_i32_0:SLR1
+slr=arith_i64_0:SLR1
+slr=ccl_offload_0:SLR1
+slr=hostctrl_0:SLR1
 slr=networklayer_0:SLR2
 slr=cmac_0:SLR2
 
